[package]
name = "ibex"
version = "0.1.0"
edition = "2024"
description = "A super lightweight cross-platform MongoDB client"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
mongodb = { version = "3" }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
